# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.12
#

2006-01-24 13:12:41 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-155

    Summary:
      merge "class diagram" tool from luis (#219), not finished
    Revision:
      itools--main--0.12--patch-155

    Patches applied:
    
     * luis@itaapy.com--private/itools--classDiagram--0.12--base-0
       tag of jdavid@itaapy.com--public/itools--main--0.12--patch-56
    
     * luis@itaapy.com--private/itools--classDiagram--0.12--patch-1
       merge classDiagram work form itools--luis--0.10
    
     * luis@itaapy.com--private/itools--classDiagram--0.12--patch-2
       clean import in test_python.py
    
     * luis@itaapy.com--private/itools--classDiagram--0.12--patch-3
       refactor get_visitor in python.py
    
     * luis@itaapy.com--private/itools--classDiagram--0.12--patch-4
       add a cache to the get_visitor method
    
     * luis@itaapy.com--private/itools--classDiagram--0.12--patch-5
       for now we deal with only one python file
    
     * luis@itaapy.com--private/itools--classDiagram--0.12--patch-6
       scripts/itaapyTools_classDiagram.py work again
    
     * luis@itaapy.com--private/itools--classDiagram--0.12--patch-7
       add the package_name attribute to the python handler
    
     * luis@itaapy.com--private/itools--classDiagram--0.12--patch-8
       add the get_package_name method to the python handler
    
     * luis@itaapy.com--private/itools--classDiagram--0.12--patch-9
       add a new test test_package_name_in_dot
    
     * luis@itaapy.com--private/itools--classDiagram--0.12--patch-10
       comment the second test in scripts/test_classDiagram.py
    
     * luis@itaapy.com--private/itools--classDiagram--0.12--patch-11
       rename class in the test_classDiagram first test
    
     * luis@itaapy.com--private/itools--classDiagram--0.12--patch-12